# SparkleShare

./: Makefile.am  configure.ac
SparkleShare/: Makefile.am  SparkleDiscovery.cs  SparkleDiscoveryGithub.cs  SparkleShare.csproj
libs/: Makefile.am
